--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=lora-wifi-gsm
-version=1.1.0
+name=jeager-one
+version=1.0
 author=mchwalfajar
 maintainer=mchwalfajar <mchwalfajar@gmail.com>
 sentence=Easy use of jeager connection with LoRa, WiFi, GSM connections
 paragraph=Device library for LoRa, WiFi, GSM on Antares
 category=Communication
-url=https://github.com/mchwalfajar/lora-wifi-gsm
+url=https://github.com/mchwalfajar/jeager-one
 architectures=esp32
