--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=jeager-one
 version=1.0
 author=mchwalfajar
 maintainer=mchwalfajar <mchwalfajar@gmail.com>
-sentence=Easy use of jeager connection with LoRa, WiFi, GSM connections
-paragraph=Device library for LoRa, WiFi, GSM on Antares
+sentence=Easy use of jeager connection with LoRa, WiFi, and GSM connections
+paragraph=Device library for LoRa, WiFi, GSM connections on Antares
 category=Communication
 url=https://github.com/mchwalfajar/jeager-one
 architectures=esp32
